# sdl2-utils

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/octaspire/sdl2-utils/: octaspire_sdl2_animation.h  octaspire_sdl2_texture.h  octaspire_sdl2_timer.h  octaspire_sdl2_utils_config.h.in
src/: octaspire_sdl2_animation.c  octaspire_sdl2_texture.c  octaspire_sdl2_timer.c
test/: CMakeLists.txt  test.c  test_sdl2_timer.c
